--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -213,12 +213,18 @@ html>body .full-height-content{
 	background-color: theme-color;
 }
 
-.tile-grid-container{
-	padding: 76px 12px 12px 12px;
+.round-btn{
+	border-radius: 20px;
 }
 
-.tile-grid-container md-grid-tile{
-	transition: all 500ms ease-out;
+.light-btn{
+	border: 1px solid #FFF;
+	color: #FFF;
+}
+
+
+.tile-grid-container{
+	padding: 76px 12px 12px 12px;
 }
 
 .tile-grid-container img{
@@ -226,68 +232,79 @@ html>body .full-height-content{
 	height: 100%;
 }
 
-.tile-grid-container md-grid-tile-footer h4{
-	font-weight: bold;
-}
-
-.flip-container{
-	perspective: 1000;
-}
-
-.flip-container, .flipper, .front, .back{
-	height: 100%;
-	width: 100%;
-}
-
-.flip-container:hover .flipper, .flip-container.hover .flipper{
-	transform: rotateY(180deg);
-}
-
-.flipper{
-	transition: 0.8s;
-	transform-style: preserve-3d;
-	
-	position: relative;
-}
-
-.front, .back{
-	backface-visibility: hidden;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.front{
-	z-index: 2;
-	transform: rotateY(0deg);
-}
-
-.back{
-	transform: rotateY(180deg);
-}
-
-.back md-whiteframe{
-	cursor: pointer;
-}
-
-.frame-link{
-	height:100%;
+.show-card{
 	width:100%;
-	text-decoration: none;
-	color:inherit;
+	height:100%;
+	position: relative;
+	overflow: hidden;
+
+	.mask{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		overflow:hidden;
+		top: 0;
+		left: 0;
+		opacity: 0;
+		background-color: rgba(0,0,0,0.4);
+		transition: all 0.4s ease-in-out;
+
+		.md-title{
+			background-color: rgba(0,0,0,0.7);
+			transition: all 0.2s ease-in-out;
+			color: #F2F2F2;
+		}
+		
+		h3, p{
+			color: #FFF!important;
+		}
+		
+		md-icon{
+			color: #FFF;
+		}
+		
+		*{
+			opacity: 0;
+		}
+	}
+	
+	img{
+		transition: all 0.2s linear;
+	}
 }
 
-.button-in md-icon{
-	width: 50%;
-	height: 50%;
+.info-card{
+	padding-bottom: 20px;
+	
+	.go-cook-btn{
+		margin-top: 10px;
+	}
 }
 
-.big-tile md-whiteframe{
-	padding: 24px 32px;
+.show-card:hover{
+	img{
+		transform: scale(1.2);
+	}
+	
+	.mask{
+		opacity: 1;
+		
+		*{
+			opacity: 1;
+		}
+	}
+}
+
+.show-card:hover md-list{
+	transition-delay: 0.2s;
+}
+	
+.show-card:hover .go-cook-btn{
+	transition-delay: 0.4s;
 }
 
 .small-tile h3{
-	font-size: sm-font-size!important;
+	font-size: default-font-size!important;
 }
 
 .small-tile p{
