--- a/public/ng/views/index.html
+++ b/public/ng/views/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body ng-app="spicyTaste" layout-fill ng-controller="MainController as main">
-    <div class="top-menu-bar" layout="row" ng-class="{'primary-bar': main.scrollTargetReached}" layout-align="center center">
+    <div class="top-menu-bar animation-block" layout="row" ng-class="{'primary-bar': main.scrollTargetReached}" layout-align="center center">
         <a ng-href="/" class="logo-link">
             <img src="images/logo.png" alt="spicy taste" class="responsive-img"></img>
         </a>
