--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -28,6 +28,9 @@ body {
 html>body .full-height-content {
   height: auto;
 }
+.light-bg {
+  background-color: #f4f7f8;
+}
 .main {
   height: 100%;
 }
@@ -48,6 +51,7 @@ html>body .full-height-content {
   width: 100%;
   background-color: rgba(255,255,255,0.5);
   z-index: 10;
+  text-transform: uppercase;
 }
 .animation-block {
   -webkit-transition: all 0.55s ease-in;
@@ -87,13 +91,10 @@ html>body .full-height-content {
 }
 .bottom-section {
   background-color: #f4f7f8;
-  position: relative;
 }
 .footer {
   background-color: #fff;
   height: 200px;
-  position: absolute;
-  bottom: 0px;
   width: 100%;
 }
 .footer >* {
@@ -150,10 +151,7 @@ html>body .full-height-content {
 }
 .tile-grid-container {
   padding: 76px 12px 12px 12px;
-}
-.tile-grid-container img {
   width: 100%;
-  height: 100%;
 }
 .show-card {
   width: 100%;
@@ -212,9 +210,6 @@ html>body .full-height-content {
 .show-card:hover md-list {
   transition-delay: 0.2s;
 }
-.show-card:hover .go-cook-btn {
-  transition-delay: 0.4s;
-}
 .small-tile h3 {
   font-size: 1em !important;
 }
@@ -227,6 +222,94 @@ html>body .full-height-content {
 }
 .italic-list li {
   padding: 4px 0;
+}
+#divDinnerHero {
+  background: url("../images/dinner-hero.png") center no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 70%;
+  color: #f2f2f2;
+}
+.show-desc {
+  height: 20%;
+}
+.show-desc p {
+  line-height: 2;
+  margin: 0 auto;
+  width: 70%;
+}
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 300px 0 300px;
+  border-color: #f4f7f8 transparent transparent transparent;
+  margin: 0 auto;
+}
+.show-container {
+  padding-top: 30px;
+  min-height: 30px;
+}
+.show-container .show-item {
+  height: 320px;
+  width: 100%;
+}
+.show-container .show-item img {
+  width: 100%;
+  height: 300px;
+}
+.show-container .show-item .left-panel,
+.show-container .show-item .right-panel {
+  width: 400px;
+}
+.show-container .show-item .left-container {
+  border-right: 1px solid rgba(0,0,0,0.4);
+}
+.show-container .show-item .left-container .left-panel.viewed {
+  margin-right: 20%;
+}
+.show-container .show-item .right-container {
+  position: relative;
+}
+.show-container .show-item .right-container .right-panel.viewed {
+  margin-left: 20%;
+}
+.show-container .show-item .right-container .show-item-tag {
+  width: 120px;
+  top: 120px;
+  left: -60px;
+  background-color: #f4f7f8;
+  padding: 30px 0;
+  position: absolute;
+  font-size: 1.3em;
+  border-radius: 50%;
+  margin: 0;
+  color: #f27242;
+}
+.show-container .show-item .show-item-desc p {
+  line-height: 1.5;
+}
+.show-container .show-item .left-panel.show-item-desc h4 {
+  text-align: right;
+}
+.show-item .item-block {
+  -webkit-transition: all 0.55s ease-in;
+  position: relative;
+  opacity: 0;
+}
+.show-item .item-block.left-panel {
+  left: -50%;
+}
+.show-item .item-block.left-panel.viewed {
+  left: 0;
+  opacity: 1;
+}
+.show-item .item-block.right-panel {
+  right: -50%;
+}
+.show-item .item-block.right-panel.viewed {
+  right: 0;
+  opacity: 1;
 }
 .login-btn-icon {
   height: 48px;
