--- a/public/css/base.styl
+++ b/public/css/base.styl
@@ -97,10 +97,14 @@ html>body .full-height-content{
 	background-color: rgba(255,255,255,0.5);
 	z-index: 10;
 	text-transform: uppercase;
+	color: theme-color;
+	
+	.md-headline{
+		font-weight:bold;
+	}
 }
 
 .main-menu{
-	color: theme-color;;
 	
 	a{
 		font-size: 16px;
@@ -135,6 +139,7 @@ html>body .full-height-content{
 	width: 120px;
 	height: 120px;
 	border-radius: 50%;
+	background-color: rgba(0,0,0,0.3);
 }
 
 .big-icon{
@@ -326,119 +331,6 @@ html>body .full-height-content{
 	padding: 4px 0;
 }
 
-//theme page
-#divThemeHero{
-	background-size: cover;
-	width: 100%;
-	height: 70%;
-	color: #F2F2F2;
-}
-
-.show-desc{
-	height: 20%;
-	
-	p{
-		line-height:2;
-		margin: 0 auto;
-		width: 70%;
-	}
-}
-
-.triangle-down{
-	width:0;
-	height:0;
-	border-style: solid;
-	border-width: 40px 300px 0 300px;
-	border-color: #F4F7F8 transparent transparent transparent
-	margin: 0 auto;
-}
-
-
-.triangle-up{
-	width:0;
-	height:0;
-	border-style: solid;
-	border-width: 0 300px 40px 300px;
-	border-color: transparent transparent #F4F7F8 transparent
-	margin: 0 auto;
-}
-
-.show-container{
-	padding-top: 30px;
-	min-height: 30px;
-	
-	.show-item{
-		height: 320px;
-		width: 100%;
-		
-		img{
-			width: 100%;
-			height: 300px;
-		}
-		
-		.left-panel, .right-panel{
-			width: 400px;
-		}
-		
-		.left-container{
-			border-right: 1px solid rgba(0,0,0, 0.4);
-			
-			.left-panel.viewed{
-				margin-right: 20%;
-			}
-		}
-		
-		.right-container{
-			position: relative;
-			
-			.right-panel.viewed{
-				margin-left:20%;
-			}
-			
-			.show-item-tag{
-				width: 120px;
-				top: 120px;
-				left: -60px;
-				background-color: #F4F7F8;
-				padding: 30px 0;
-				position: absolute;
-				border-radius:50%;
-				margin:0;
-				color: theme-color;
-			}
-		}
-		
-		.show-item-desc{
-			p{
-				line-height: 1.5
-			}
-		}
-		
-		.left-panel.show-item-desc h4{
-			text-align: right;
-		}
-	}
-}
-
-.show-item .item-block
-	transition: all 0.55s ease-in;
-	position: relative;
-	opacity: 0;
-	
-	&.left-panel
-		left: -50%;
-		
-		&.viewed
-			left: 0;
-			opacity: 1;
-		
-	&.right-panel
-		right: -50%;
-		
-		&.viewed
-			right: 0;
-			opacity: 1;
-
 //login dialog
 .login-btn-icon{
 	height: 48px;
@@ -481,6 +373,22 @@ html>body .full-height-content{
 	background-size:cover;
 	background-position:center;
 	background-repeat:no-repeat;
+	position: relative;
+	
+	h2{
+		color: #F2F2F2;
+		z-index:10;
+		line-height:2;
+	}
+}
+
+.hero-mask{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height:100%;
+	width:100%;
+	background-color: rbga(0,0,0,0.3);
 }
 
 //Dish detail Page
@@ -576,7 +484,7 @@ html>body .full-height-content{
 	
 	img{
 		width: 100%;
-		height: auto;
+		// height: auto;
 	}
 }
 
@@ -585,6 +493,8 @@ html>body .full-height-content{
 	
 	img{
 		opacity: 1;
+		background-color: rgba(0,0,0,0.3);
+		min-height: 200px;
 	}
 
 	&:hover {
