--- a/public/css/dish-instruction.styl
+++ b/public/css/dish-instruction.styl
@@ -3,16 +3,20 @@
 .instruction-container{
 	position: relative;	
 }
-.nav-btn{
-	height: 320px;
-	width: 100px;
-	z-index:10;
-	background-color: rgba(250,250,250,0.3);
+
+.instruction-title-bar{
+	background-color: rgba(0,0,0,0.7);
+	color: #F2F2F2;
+	z-index: 10;
+	position: absolute;
+	bottom: 120px;
+	left:0;
+	width: 100%;
 	
-	md-icon{
-		height:100%;
-		width:100%;
-		color: light-font-color;
+	a{
+		text-decoration: none;
+		border-bottom: 1px solid rgba(250, 250, 250, 0.3);
+		color: #F2F2F2;
 	}
 }
 
