share page and login revised

--- a/public/css/mixins.styl
+++ b/public/css/mixins.styl
@@ -18,8 +18,12 @@ light-font-color = #F2F2F2;
 
 grey-background-color = #F4F7F8
 
+warn-color = rgb(198,40,40)
+
 light-border = 1px solid rgba(250,250,250,0.4)
 dark-border = 1px solid rgba(0,0,0,0.4)
+
+fb-theme-color = #6984b4;
 
 animation()
 	animation: arguments
