--- a/public/ng/views/pages/home.html
+++ b/public/ng/views/pages/home.html
@@ -1,7 +1,7 @@
 <div id="divLanding" class="full-height-content" layout="column" layout-align="center center">
     <div flex layout="row" layout-align="center end">
         <md-button ng-href="/themes/dinner" class="hero-btn solid-btn">Inspire Me</md-button>
-        <md-button class="hero-btn">Share Mine</md-button>
+        <md-button class="hero-btn" ng-href="/share">Share Mine</md-button>
     </div>
     <div flex layout="column" layout-align="end center" class="see-more-container">
         <p>Check out the recent recipts</p>
