--- a/public/ng/views/pages/not-authorize.html
+++ b/public/ng/views/pages/not-authorize.html
@@ -1,1 +1,3 @@
-<h1>YOU ARE NOT AUTHORIZE TO SEE THIS PAGE</h1>
+<div class="full-height-content" layout layout-align="center center">
+    <h1>YOU ARE NOT AUTHORIZE TO SEE THIS PAGE</h1>
+</div>
