--- a/public/css/base.styl
+++ b/public/css/base.styl
@@ -8,6 +8,14 @@ html, body{
 	color: dark-font-color;
 }
 
+.warn-color{
+	color: warn-color;
+}
+
+.theme-color{
+	color: theme-color;
+}
+
 .accent-font{
 	font-family: "Montserrat", sans-serif;
 }
@@ -35,6 +43,11 @@ html, body{
 
 .light-icon{
 	color: light-font-color;
+}
+
+.medium-icon{
+	width:32px;
+	height:32px;
 }
 
 .social-icon{
@@ -101,6 +114,11 @@ html>body .full-height-content{
 	
 	.md-headline{
 		font-weight:bold;
+	}
+	md-icon{
+		height:48px;
+		width:48px;
+		color:light-font-color;
 	}
 }
 
@@ -331,22 +349,6 @@ html>body .full-height-content{
 	padding: 4px 0;
 }
 
-//login dialog
-.login-btn-icon{
-	height: 48px;
-	width: 48px;
-	color: #FFF;
-}
-
-.fb-btn{
-	background-color:#6984b4;
-	color: #FFF;
-}
-
-.login-dialog .md-button{
-	margin:0;
-}
-
 .avatar {
   position: relative;
   width: 64px;
@@ -464,8 +466,6 @@ html>body .full-height-content{
 	margin-right: 5px;
 }
 
-//theme admin list page
-
 //theme edit page
 .theme-components-edit{
 	height: 1400px;
@@ -568,6 +568,10 @@ html>body .full-height-content{
 	transition: all 0.5s ease-in;
 }
 
+input.ng-invalid.ng-touched{
+	border-color:warn-color;
+}
+
 //MD
 md-list{
 	padding: 0;
@@ -628,41 +632,3 @@ label.md-title{
   opacity:1;
 }
 
-//overwrite booklet style
-.booklet .b-page-cover{
-	background:none;
-}
-
-.book-img-page{
-	height: 100%;
-	background-size:cover!important;
-}
-
-.img-mask{
-	background-color: rgba(0,0,0,0.2);
-	width:100%;
-	height:100%;
-}
-
-.book-title{
-	color: #FFF;
-	text-align:center;
-}
-
-.book-text{
-	padding: 16px;
-}
-
-.book-backdrop{
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background-color: rgba(0,0,0,0.8);
-	z-index:79;
-}
-
-md-dialog-content.book-container{
-	padding: 14px;
-}
