--- a/public/ng/views/pages/admin/dish/list.html
+++ b/public/ng/views/pages/admin/dish/list.html
@@ -12,7 +12,7 @@
     </div>
     <md-content flex="60">
         <md-list>
-            <md-list-item ng-repeat-start="dish in dishList.dishes" class="md-2-line" ng-click="dishList.goToEdit(dish._id)">
+            <md-list-item ng-repeat-start="dish in dishList.dishes" class="md-2-line" ng-href="/dishes/{{dish._id}}">
                 <img ng-src="{{dish.imageUrl}}" alt="{{dish.name}}" class="md-avatar">
                 <div class="md-list-item-text">
                     <h3>{{dish.name}}</h3>
